[tool.poetry]
name = "shodan-cli"
version = "0.1.0"
description = "a shodan cli tools for pyython 3"
authors = ["seaung <seaung.c0m7de@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
